<resources>
    <!--
    s = string
    chbx = checkbox
    t = title
    m = message
    hdl = header drawer layout
    irv = item recyclerview
    ex = example
    ih = input help
    -->
    <!-- https://developer.android.com/guide/topics/resources/string-resource -->
    <string name="app_name">jInventário</string>
    <string name="app_made_by">jMercado - Ernani Lima</string>
    <string name="s_loading">Carregando…</string>
    <string name="s_t_login">Login</string>
    <string name="s_email">E-mail</string>
    <string name="s_password">Senha</string>
    <string name="s_forgot_password">Esqueceu a senha?</string>
    <string name="s_not_registered">Não é cadastrado?</string>
    <string name="s_sing_up">Cadastre-se.</string>
    <string name="s_social_network_login">Login Social</string>
    <string name="s_login_gmail">Entrar com o Gmail</string>
    <string name="s_t_forgot_password">Esqueceu a Senha</string>
    <string name="s_m_forgot_password">Informe o seu e-mail cadastrado.</string>
    <string name="s_t_sing_up">Cadastrar Usuário</string>
    <string name="s_chbx_privacy_policy">Li e aceito a <u><b>Política de Privacidade</b></u></string>
    <string name="link_privacy_policy">https://ernanilima.com.br/jinventario/poliitica_de_privacidade_do_app_inventaario_de_estoque.html</string>
    <string name="s_back">Voltar</string>
    <string name="s_continue">Continuar</string>
    <string name="s_important_device_name">IMPORTANTE: o nome não pode ser alterado depois, o nome definido é usado na exportação da contagem, assim o usuário pode usar mais de um aparelho e pelo nome definido abaixo o usuário saberá de onde é a contagem.</string>
    <string name="s_ex_device_name">ex: coletor_estoque</string>
    <string name="s_device_name">Nome para o aparelho</string>

    <!--  Dialog  -->
    <string name="s_dialog_title">Atenção</string>
    <string name="s_dialog_ex_message">Mensagem</string>
    <string name="s_dialog_btn_negative">Não</string>
    <string name="s_dialog_btn_positive">Sim</string>
    <string name="s_dialog_msg_email_verification">Reenviar e-mail de verificação?</string>
    <string name="s_dialog_msg_sing_out">Deseja sair?</string>
    <string name="s_dialog_msg_new_count">Criar uma contagem?</string>
    <string name="s_dialog_msg_delete_count">Deseja apagar a contagem de número %s?</string>
    <string name="s_dialog_msg_delete_count_item">Deseja excluir o item informado abaixo?</string>

    <!--  App  -->
    <string name="s_new_count">Nova Contagem</string>
    <string name="s_hdl_device_name">Aparelho:</string>
    <string name="s_hdl_ex_device_name">ColetorLoja</string>
    <string name="s_hdl_email">E-mail:</string>
    <string name="s_hdl_ex_email">email@email.com.br</string>
    <string name="s_irv_stock_count_number">Contagem de estoque número:</string>
    <string name="s_irv_ex_stock_count_number">9999</string>
    <string name="s_irv_creation_date">Data de Criação</string>
    <string name="s_irv_ex_date">99/99/99</string>
    <string name="s_irv_date_hour_update">Data e Hora da Alteração</string>
    <string name="s_irv_ex_date_hour">99/99/99 99:99</string>
    <string name="s_irv_total_items">Total de Itens</string>
    <string name="s_irv_total_price">Preço Total</string>
    <string name="s_irv_ex_total_items">999.999</string>
    <string name="s_barcode">Código De Barras</string>
    <string name="s_irv_ex_barcode">78901234567890</string>
    <string name="s_unit_price">Preço Unitário Do Produto</string>
    <string name="s_number_of_boxes">Qtd De Cxs</string>
    <string name="s_number_per_box">Qtd Por Cx</string>
    <string name="s_irv_ex_unit_quantity">999</string>
    <string name="s_ok">Ok</string>
    <string name="s_total_quantity">Qtd Total</string>
    <string name="s_irv_ex_total_quantity">9.999</string>
    <string name="s_total_price">Prc Total</string>
    <string name="s_irv_ex_total_price">9888,77</string>

    <!--  Menus  -->
    <string name="s_menu_home">Início</string>
    <string name="s_menu_new_count">Nova Contagem</string>
    <string name="s_menu_current_count">Contagem Nº: %s</string>
    <string name="s_sub_menu_others">Outros</string>
    <string name="s_menu_privacy_policy">Política de Privacidade</string>
    <string name="s_menu_settings">Configuração</string>
    <string name="s_menu_exit">Sair</string>
    <string name="s_toolbar_menu_share">Compartilhar</string>

    <!--  Input Help  -->
    <string name="ih_field_empty_error">Campo não pode ser vazio</string>
    <string name="ih_field_min_error">O conteúdo deve ser maior que %s</string>
    <string name="ih_field_length_error">O conteúdo deve ter %s caracteres no mínimo</string>
    <string name="ih_email_error">E-mail inválido</string>
    <string name="ih_password_not_match">A senha fornecida não combina</string>
    <string name="ih_default_error">Erro identificado</string>

    <!--  Mensagens  -->
    <string name="msg_invalid_email">Informe um e-mail válido</string>
    <string name="msg_invalid_password">Informe uma senha válida</string>
    <string name="msg_passwords_not_match">Senhas não combinam</string>
    <string name="msg_disabled_user">Usuário desativado</string>
    <string name="msg_user_not_found">Usuário não encontrado</string>
    <string name="msg_expired_token">Token do usuário está expirado</string>
    <string name="msg_broken_token">Token quebrado, erro no app</string>
    <string name="msg_invalid_token">Token inválido</string>
    <string name="msg_email_already_exists">E-mail já existe</string>
    <string name="msg_invalid_credential">Credencial inválida</string>
    <string name="msg_credential_of_another_user">Credenciais não são do usuário atual</string>
    <string name="msg_relogin">Esta operação é confidencial e requer autenticação recente. Faça login novamente antes de tentar novamente esta solicitação</string>
    <string name="msg_operation_not_allowed">Operação não permitida. Ative o método no console do Firebase</string>
    <string name="msg_verification_not_sent">E-mail de verificação não pode ser enviado, tente mais tarde</string>
    <string name="msg_locked_device">Bloqueamos todas as solicitações deste dispositivo devido a atividade incomum</string>
    <string name="msg_registered_user">Usuário cadastrado, foi enviado uma verificação para seu e-mail</string>
    <string name="msg_email_update_password_sent">As informações para "Nova Senha" foram enviadas no e-mail</string>
    <string name="msg_email_verification_sent">Novo e-mail de verificação foi enviado</string>
    <string name="msg_invalid_barcode">Código de barras inválido</string>
    <string name="msg_invalid_number_of_boxes">Qtd de caixa(s) inválida</string>
    <string name="msg_invalid_number_per_box">Qtd por caixa(s) inválida</string>
    <string name="msg_invalid_device_name">Informe um nome válido para o aparelho</string>
    <string name="msg_empty_share">Nenhum item para compartilhar</string>
    <string name="msg_without_internet">Aparelho sem internet</string>
    <string name="msg_privacy_policy">Leia e aceita a política de privacidade</string>
    <string name="msg_no_premise_the_camera">Aplicativo não possui permissão para usar a "camera" do aparelho</string>
    <string name="msg_minimum_of_characters">Necessário informar no mínimo %s caractere(s)</string>
    <string name="msg_waiting_time">Aguarde %s minuto(s) para enviar o e-mail novamente</string>
    <string name="msg_unknown_error">Ocorreu um erro desconhecido</string>

    <!--  Sem permissao  -->
    <string name="msg_without_camera_permission">Sem permissão para usar a câmera</string>

    <!--  Configuracoes  -->
    <string name="s_chbx_show_price">Informar preço do produto coletado:</string>
    <string name="s_chbx_camera_scanner">Ativar a camera como scanner:</string>
    <string name="s_radio_camera_mlkit">Usar Camera ML KIT (Google)</string>
    <string name="s_radio_camera_zxing">Usar Camera ZXING (Zebra)</string>
</resources>