<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/s_dialog_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:layout_marginBottom="12sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:textSize="18sp"
            android:text="@string/s_dialog_ex_message" />

        <LinearLayout
            android:id="@+id/layout_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:textSize="18sp"
                android:text="@string/s_barcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=": " />

            <TextView
                android:id="@+id/field_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:textSize="18sp"
                android:text="@string/s_irv_ex_barcode" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_total_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_total_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:textSize="18sp"
                android:text="@string/s_irv_total_items" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=": " />

            <TextView
                android:id="@+id/field_total_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:textSize="18sp"
                android:text="@string/s_irv_ex_total_items" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.JInventario.Dialog.Button"
            android:text="@string/s_dialog_btn_negative" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.JInventario.Dialog.Button"
            android:text="@string/s_dialog_btn_positive" />
    </LinearLayout>

</LinearLayout>