<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end"
    android:paddingTop="10sp"
    android:paddingBottom="10sp"
    android:paddingStart="16sp"
    android:paddingEnd="0sp"
    tools:showIn="@layout/fragment_app_home_stock_count">

    <LinearLayout
        android:id="@+id/layout_barcode"
        android:layout_width="wrap_content"
        android:layout_height="33sp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/layout_number_of_boxes"
        android:orientation="vertical"
        android:layout_marginEnd="8sp">

        <TextView
            android:id="@+id/label_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_barcode"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/field_barcode"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:text="@string/s_irv_ex_barcode" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_number_of_boxes"
        android:layout_width="46sp"
        android:layout_height="33sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toStartOf="@+id/layout_number_per_box"
        android:layout_marginEnd="8sp">

        <TextView
            android:id="@+id/label_number_of_boxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_number_of_boxes"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/field_number_of_boxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_irv_ex_unit_quantity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_number_per_box"
        android:layout_width="44sp"
        android:layout_height="33sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toStartOf="@+id/layout_total_quantity"
        android:layout_marginEnd="8sp">

        <TextView
            android:id="@+id/label_number_per_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_number_per_box"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/field_number_per_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_irv_ex_unit_quantity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_total_quantity"
        android:layout_width="39sp"
        android:layout_height="33sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toStartOf="@+id/layout_total_price"
        android:layout_marginEnd="8sp">

        <TextView
            android:id="@+id/label_total_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_total_quantity"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/field_total_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_irv_ex_total_quantity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_total_price"
        android:layout_width="55sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toStartOf="@+id/btn_edit"
        android:layout_marginEnd="8sp">

        <TextView
            android:id="@+id/label_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_total_price"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/field_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_irv_ex_total_price"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_edit"
        android:layout_width="41sp"
        android:layout_height="33sp"
        android:paddingStart="0sp"
        android:paddingEnd="16sp"
        android:textSize="0sp"
        android:src="@drawable/ic_editar"
        android:layout_alignParentEnd="true" />

</RelativeLayout>