<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10sp"
    android:paddingBottom="10sp"
    android:paddingStart="16sp"
    android:layout_gravity="center"
    android:orientation="horizontal"
    tools:showIn="@layout/fragment_app_home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10sp"
        android:layout_toStartOf="@+id/btn_edit"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_count_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/s_irv_stock_count_number" />

            <TextView
                android:id="@+id/field_count_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_toEndOf="@+id/txt_count_number"
                android:text="@string/s_irv_ex_stock_count_number" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_creation_date"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/s_irv_creation_date"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txt_date_hour_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/txt_total"
                android:layout_toEndOf="@+id/txt_creation_date"
                android:gravity="center"
                android:text="@string/s_irv_date_hour_update"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/s_irv_total"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/field_creation_date"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="start"
                android:text="@string/s_irv_ex_date" />

            <TextView
                android:id="@+id/field_date_hour_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/field_total"
                android:layout_toEndOf="@+id/field_creation_date"
                android:gravity="center"
                android:text="@string/s_irv_ex_date_hour" />

            <TextView
                android:id="@+id/field_total"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/s_irv_ex_total" />

        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_edit"
        android:layout_width="41sp"
        android:layout_height="53sp"
        android:paddingEnd="16sp"
        android:textSize="0sp"
        android:src="@drawable/ic_editar"
        android:layout_alignParentEnd="true" />

</RelativeLayout>